<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConverterActivity">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="127dp"
        android:layout_height="78dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/money" />

    <EditText
        android:id="@+id/editTextCurrencyValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/write_value"
        android:inputType="phone"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/buttonConvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio_group_currencies"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="onClickButtonConvert"
        android:text="@string/convert" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonConvert"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/in_d"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/in_e"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_below="@id/textView4"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_y"
        android:textSize="16sp"
         />

    <TextView
        android:id="@+id/textView7"
        android:layout_below="@id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/in_r"
        android:textSize="16sp"
       />

    <TextView
        android:id="@+id/textView8"
        android:layout_below="@id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/in_t"
        android:textSize="16sp"
         />

    <TextView
        android:id="@+id/textViewDollars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonConvert"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/textView3" />

    <TextView
        android:id="@+id/textViewEuros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewDollars"
        android:layout_alignLeft="@+id/textViewDollars"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/textViewYens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewEuros"
        android:layout_alignLeft="@+id/textViewEuros"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/textViewRubles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewYens"
        android:layout_alignLeft="@+id/textViewYens"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/textViewTenges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewRubles"
        android:layout_alignLeft="@+id/textViewRubles"
        android:layout_marginTop="20dp" />

    <RadioGroup
        android:id="@+id/radio_group_currencies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextCurrencyValue"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_dollar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:checked="true"
            android:text="@string/dollar" />

        <RadioButton
            android:id="@+id/radio_euro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/euro" />

        <RadioButton
            android:id="@+id/radio_yen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/yen" />

        <RadioButton
            android:id="@+id/radio_ruble"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/ruble" />

        <RadioButton
            android:id="@+id/radio_tenge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/tenge" />
    </RadioGroup>
</RelativeLayout>